add i18n (skill translations missing)

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>Used Libraries</mat-toolbar>
+<mat-toolbar>{{ 'COMPONENTS__ABOUT' | translate }}</mat-toolbar>
 <mat-list role="list">
   <mat-list-item>
     <h4 mat-line class="bold">Angular</h4>
