--- a/src/app/components/skills/beacon-skill/beacon-skill.component.html
+++ b/src/app/components/skills/beacon-skill/beacon-skill.component.html
@@ -42,7 +42,9 @@
   <mat-accordion>
     <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Beacon; trackBy: trackById; let i = index"
                          [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
-      <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
+      <mat-expansion-panel-header>
+        {{ LevelRule.toKey(upgrade.rule) | translate:LevelRule.toData(upgrade.rule) }}
+      </mat-expansion-panel-header>
       <div fxLayout="column">
         <mat-card>
           <mat-input-container>
