--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -56,7 +56,9 @@
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Ride; trackBy: trackById; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
-    <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
+    <mat-expansion-panel-header>
+      {{ LevelRule.toKey(upgrade.rule) | translate:LevelRule.toData(upgrade.rule) }}
+    </mat-expansion-panel-header>
     <div fxLayout="column">
       <mat-card>
         <mat-input-container>
