--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -27,7 +27,7 @@
                    (blur)="update(skilltree, upgrade, 'rows', $event.srcElement.value)">
             <span matSuffix>rows</span>
           </mat-input-container>
-          <button mat-icon-button [satPopoverAnchorFor]="rowsPopover" (click)="rowsPopover.toggle()">
+          <button mat-icon-button [stcDynamicPopoverAnchorFor]="rowsPopover">
             <mat-icon svgIcon="info_outline">info_outline</mat-icon>
           </button>
         </mat-card>
