--- a/src/app/components/skills/life-skill/life-skill.component.html
+++ b/src/app/components/skills/life-skill/life-skill.component.html
@@ -26,7 +26,7 @@
                  (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
           <span matSuffix>extra health</span>
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="healthPopover" (click)="healthPopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="healthPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
