--- a/src/app/components/skills/poison-skill/poison-skill.component.html
+++ b/src/app/components/skills/poison-skill/poison-skill.component.html
@@ -39,7 +39,7 @@
                  (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
           <span matSuffix>%</span>
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="chancePopover" (click)="chancePopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="chancePopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
@@ -50,7 +50,7 @@
                  (blur)="update(skilltree, upgrade, 'duration', $event.srcElement.value)">
           <span matSuffix>sec</span>
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="durationPopover" (click)="durationPopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="durationPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
