--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -66,7 +66,7 @@
                  pattern="[+-=][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'speed', $event.srcElement.value)">
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="speedPopover" (click)="speedPopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="speedPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
@@ -77,7 +77,7 @@
                  (blur)="update(skilltree, upgrade, 'jumpHeight', $event.srcElement.value)">
           <span matSuffix>Blocks</span>
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="jumpHeightPopover" (click)="jumpHeightPopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="jumpHeightPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
@@ -97,7 +97,7 @@
                  (blur)="update(skilltree, upgrade, 'flyLimit', $event.srcElement.value)">
           <span matSuffix>Meters</span>
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="flyLimitPopover" (click)="flyLimitPopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="flyLimitPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
@@ -109,7 +109,7 @@
                  (blur)="update(skilltree, upgrade, 'flyRegenRate', $event.srcElement.value)">
           <span matSuffix>Meters/Tick</span>
         </mat-input-container>
-        <button mat-icon-button [satPopoverAnchorFor]="flyRegenRatePopover" (click)="flyRegenRatePopover.toggle()">
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="flyRegenRatePopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
       </mat-card>
